= {project-name} Changelog
:project-name: Kramdown AsciiDoc
:uri-repo: https://github.com/asciidoctor/kramdown-asciidoc

This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

=== Added

* automatically coerce level 5 heading above codeblock to block title
* convert HTML-based admonition blocks
* drop HTML div element around an image
* transfer id and class/role attributes to block image
* pass through width attribute to image if specified on HTML img element

=== Changed

* don't modify AST when converting
* transfer comments above document title to header
* don't add cols attribute to table if table only has a single column
* don't add blank line between rows if table only has a single column
* expand \&#124; to |
* escape pipe in table cell
* replace ^ with \{caret} in normal text
* replace double underscore in URL with %5F%5F
* don't rewrite bash source language as console

== 1.0.0.alpha.1 (2018-05-22) - @mojavelinux

Initial release.