@@ -1,0 +1,5 @@
+[![](download.svg) Download](https://rubygems.org/gems/kramdown-asciidoc)
+
+[![](download.svg) Download](download.md)
+
+[![](download.svg) Download](download.html)
